# HitomezashiDesignPy

./: .gitignore  002.bat  consts.py  design.py  pyproject.toml
